# LamQuant-Lossless

./: .gitignore  .zenodo.json  API.md  CHANGELOG.md  CITATION.cff  Cargo.toml  LAUNCH_BLOCKERS.md  README.md  pyproject.toml
crates/lamquant-abir/: Cargo.toml
crates/lamquant-abir-bridge/: Cargo.toml
crates/lamquant-abir-codec/: Cargo.toml  build.rs
crates/lamquant-common/: Cargo.toml  README.md
crates/lamquant-history/: Cargo.toml
crates/lamquant-ipc-types/: Cargo.toml
crates/lamquant-lml-legacy/: Cargo.toml
crates/lamquant-lsl/: Cargo.toml  FEATURES.md  README.md
crates/lamquant-neg/: Cargo.toml
crates/lamquant-ops/: Cargo.toml
crates/lamquant-standard-adapters/: Cargo.toml
crates/lmafs/: Cargo.toml
lamquant-firmware/: Cargo.toml  build.rs  memory.x
lamquant-firmware/.cargo/: config.toml
lamquant-firmware/memory/: esp32p4.x  nrf54l15.x  stm32n6.x
lamquant-firmware/src/: comms.rs  integrity.rs  lib.rs  main.rs  power.rs  scheduler.rs  stack_guard.rs
lamquant-firmware/tests/: cat_b_smoke.rs  conformance.rs
lamquant-lml-desktop/: Cargo.toml
lamquant-lml-desktop/examples/: backend_byte_equality.rs
lamquant-lml-desktop/src/: backend.rs  io.rs  lib.rs  parallel.rs
lamquant-lml-desktop/tests/: byte_equal_backends.rs  public_seam.rs
lamquant-lml-h5filter/: Cargo.toml  README.md
lamquant-lml-h5filter/scripts/: validate_h5repack.sh
lamquant-lml-h5filter/src/: hdf5_abi.rs  lib.rs
lamquant-lml-h5filter/tests/: roundtrip.rs
lamquant-lml-mcu/: Cargo.toml
lamquant-lml-mcu/examples/: autocorr_bench.rs  profile_encode.rs
lamquant-lml-mcu/src/: arith_cat.rs  arithmetic.rs  backend.rs  bit_pack.rs  codec.rs  codec_errors.rs  golomb.rs  lib.rs  lml.rs  lmqc.rs  lpc.rs  parallel.rs  quant.rs  rans.rs  zrle.rs
lamquant-lml-mcu/tests/: bounded_mae_property.rs  byte_equal_backends.rs  conformance.rs  property_roundtrip.rs  target_bps_property.rs
lamquant-lml-optimum/: Cargo.toml  build.rs
lamquant-lml-optimum-v2/: Cargo.toml
lamquant-lml-optimum-v2/src/: bgf1_learned.rs  bgf1_model_pack.rs  binary_rans.rs  derivation_forest.rs  derivation_incidence.rs  dix1.rs  dix1_blocks.rs  dix1_carrier.rs  dix1_entropy.rs  dix2_blocks.rs  dix2_carrier.rs  lib.rs  mix1.rs  mix1_entropy.rs  mix1_lattice.rs  mix1_multivariate.rs  model_pack.rs  universal.rs
lamquant-lml-optimum-v2/tests/: bgf1_learned.rs  cli_protocol.rs  dix1_carrier.rs  dix1_cli.rs  dix1_reference_decoder.rs  dix1_synthetic.rs  dix2_blocks.rs  dix2_carrier.rs  dix2_cli.rs  dix2_reference_decoder.rs  dix2_tree.rs  mix1_carrier.rs  mix1_cli.rs  model_pack.rs  public_roundtrip.rs  universal_conformance.rs
lamquant-lml-optimum/examples/: a5_redundancy_probe.rs  adaptive_lms_probe.rs  affine_xchan_probe.rs  av2_adaptive_rice_probe.rs  av2_ltp_probe.rs  best_basis_probe.rs  block_backadapt_ls_probe.rs  block_golomb_probe.rs  candidate_cost.rs  cascade_probe.rs  coding_ab.rs  crosschan_ab.rs  crosschan_lossless_ab.rs  crosschan_multiref_ab.rs  crosschan_probe.rs  crosschan_residual_ab.rs  dct_domain_predict_probe.rs  decoupled_lambda_probe.rs  dump_residual.rs  e_a1_mvrls_structure_probe.rs  e_a1b_generalization_probe.rs  e_a2_krls_whitening_probe.rs  e_a3_mvrls_bias_probe.rs  ecg_ltp_probe.rs  ecg_predictor_probe.rs  empirical_grouping_probe.rs  entropy_backend_probe.rs  entropy_headroom_probe.rs  gap_attribution_probe.rs  geometry_container_ab.rs  geometry_refs_ab.rs  learned_entropy_probe.rs  learned_predictor_probe.rs  lossless_coding_ab.rs  lossless_full.rs  lossless_scoreboard.rs  lossy_points.rs  lossy_rls_probe.rs  lsb_debug.rs  ltp_backadapt_probe.rs  (+28 more)
lamquant-lml-optimum/src/: arith_int.rs  crosschan.rs  entropy.rs  lib.rs  lmo.rs  lmo_lossless.rs  lmo_pcrd97.rs  montage.rs  mv_rls.rs  rls.rs  scale_cond.rs  segmentation.rs  tcq.rs  wavelet97.rs
lamquant-lml-optimum/tests/: cli_protocol.rs  dual_format_battery.rs
lamquant-lmq/: Cargo.toml
lamquant-lmq/python/: lmq_infer.py
lamquant-lmq/src/: backend.rs  body.rs  lib.rs  py_backend.rs  rust_backend.rs  shell.rs
lamquant-lmq/tests/: py_backend_bridge.rs  rans_parity.rs
lamquant-lossless/: Cargo.toml  README.md  build.rs  cbindgen.toml  pyproject.toml
lamquant-lossless-core/: Cargo.toml
lamquant-lossless-core/src/: arith_cat.rs  codec.rs  golomb.rs  lib.rs  quant.rs  rans.rs
lamquant-lossless-core/tests/: bounded_mae_property.rs  byte_equal_backends.rs  conformance.rs  property_roundtrip.rs  target_bps_property.rs
lamquant-lossless/benches/: cat_b_compare.rs  codec.rs
lamquant-lossless/fuzz/: Cargo.toml
lamquant-lossless/include/: lml.h
lamquant-lossless/src/: abir_container.rs  arith_cat.rs  arithmetic.rs  async_io.rs  backend.rs  bcs1_stream.rs  bcs2_container.rs  bit_pack.rs  codec_stages.rs  container.rs  container_reader.rs  deployment.rs  edf.rs  error.rs  ffi.rs  io.rs  ir.rs  lib.rs  lifting.rs  lma.rs  lml.rs  lmqc.rs  lpc.rs  normalize.rs  nwb.rs  offset_table.rs  pass.rs  pipeline.rs  pipeline_dsl.rs  quant.rs  range.rs  security.rs  stage.rs  stream.rs  tensor_pack.rs  wasm.rs  workflows.rs  zrle.rs
lamquant-lossless/tests/: archive_contract.rs  bcs1_read_paths.rs  bounded_mae_property.rs  byte_equal_backends.rs  cat_b_smoke.rs  cli_contract.rs  cli_metadata_snapshot.rs  config_save.rs  conformance.rs  conformance_vectors.rs  container_reader_contract.rs  cr_baselines.json  cr_regression.rs  cross_platform_bytes.rs  dag_reference_equals_fused.rs  dicom_parity.rs  edf_safety.rs  front_end_bit_exact.rs  launcher_argv.rs  legacy_crc_decode.rs  lma_conformance.rs  lml_json_events.rs  lossy_wire_golden.rs  modality_provenance_snapshot.rs  normalize_parity.rs  nwb_bundle.rs  nwb_reader.rs  op_e2e.rs  optimum_v2_facade.rs  oracle_diff.rs  output_panel_cancel.rs  peers_roundtrip.rs  property_roundtrip.rs  reducer_unit.rs  snapshot_wire_format.rs  target_bps_property.rs  tui_golden.rs  tui_smoke.rs  window_size_transition.rs  wizard_buffer.rs
lamquant-lossless/wasm/: package.json
lamquant-optimum/: Cargo.toml
lamquant-optimum/src/: lib.rs  lmo.rs
lamquant-py/: Cargo.toml  README.md  pyproject.toml
(+746 files in other folders)
