[workspace]
resolver = "2"
members = [
    "gui/src-tauri",
    "lamquant-core",
    "lamquant-firmware",
    "lamquant-weights",
]
# Firmware + weights use a different target (riscv32imac) and the firmware
# profile. Default `cargo build` from root only touches host crates;
# weights crate is no_std + alloc-free so it builds cleanly anywhere.
default-members = [
    "gui/src-tauri",
    "lamquant-core",
    "lamquant-weights",
]

# Custom profile for firmware builds. Use with:
#   cargo build --profile firmware -p lamquant-firmware
[profile.firmware]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false
debug = false
strip = "symbols"

[profile.firmware-dev]
inherits = "dev"
opt-level = 1
panic = "abort"
overflow-checks = true
debug = 2
