[workspace]
resolver = "2"
members = [
    "crates/lamquant-history",
    "crates/lamquant-lsl",
    "crates/lamquant-ops",
    "crates/lmafs",
    "gui/src-tauri",
    "lamquant-core",
    "lamquant-firmware",
    "lamquant-weights",
]
# Firmware + weights use a different target (riscv32imac) and the firmware
# profile. Default `cargo build` from root only touches host crates;
# weights crate is no_std + alloc-free so it builds cleanly anywhere.
#
# lamquant-lsl is intentionally excluded from `default-members` — it
# depends on the system liblsl (or builds it via build.rs) which may
# not be present on every dev machine. Build it explicitly via
# `cargo build -p lamquant-lsl` when LSL integration is needed.
default-members = [
    "crates/lamquant-history",
    "crates/lamquant-ops",
    "crates/lmafs",
    "gui/src-tauri",
    "lamquant-core",
    "lamquant-weights",
]
# Fuzz harness uses libfuzzer-sys + nightly toolchain; lives outside
# the host workspace so `cargo build` from root doesn't pull in nightly
# deps. Drive it explicitly via `cd lamquant-core && cargo +nightly fuzz`.
exclude = [
    "lamquant-core/fuzz",
    # BLUT is its own Cargo workspace; included via git submodule but
    # NEVER absorbed into the LamQuant workspace. Build via
    # `cd blut && cargo build`. See ADR 0017.
    "blut",
]

# Custom profile for firmware builds. Use with:
#   cargo build --profile firmware -p lamquant-firmware
[profile.firmware]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false
debug = false
strip = "symbols"

[profile.firmware-dev]
inherits = "dev"
opt-level = 1
panic = "abort"
overflow-checks = true
debug = 2
