[workspace]
resolver = "2"
members = [
    "crates/lamquant-common",
    "crates/abir",
    "crates/lamquant-neg",
    "crates/lamquant-lml-legacy",
    "lamquant-lml-mcu",
    "lamquant-lml-desktop",
    "lamquant-lml-optimum",
    "lamquant-lmq",
    "lamquant-lossless",
    "lamquant-py",
    # HDF5 H5Z filter cdylib (ADR 0051 Track 3). In `members` so it shares the
    # lock, but kept OUT of `default-members` below: it links system libhdf5,
    # so a bare `cargo build` must not pull it in. Build it explicitly with
    # `cargo build -p lamquant-lml-h5filter --release`.
    "lamquant-lml-h5filter",
]
# Firmware + weights moved to the LamQuant-Firmware submodule (ADR 0026
# phase B.1, 2026-05-30). lamquant-lsl moved to the Vision submodule
# (ADR 0026 phase B.2, 2026-05-30). lmafs moved to meta-repo
# plugins/linux/lmafs/ (OS plugin layer, 2026-06-19).
# This workspace is now host codec-only.
default-members = [
    "crates/lamquant-common",
    "crates/abir",
    "crates/lamquant-neg",
    "crates/lamquant-lml-legacy",
    "lamquant-lml-mcu",
    "lamquant-lml-desktop",
    "lamquant-lml-optimum",
    "lamquant-lmq",
    "lamquant-lossless",
    "lamquant-py",
]
# Fuzz harness uses libfuzzer-sys + nightly toolchain; lives outside
# the host workspace so `cargo build` from root doesn't pull in nightly
# deps. Drive it explicitly via `cd lamquant-lossless && cargo +nightly fuzz`.
exclude = [
    "lamquant-lossless/fuzz",
    # BLUT is its own Cargo workspace; included via git submodule but
    # NEVER absorbed into the LamQuant workspace. Build via
    # `cd blut && cargo build`. See ADR 0017.
    "blut",
]

# Firmware-specific profiles (firmware, firmware-dev) moved to the
# LamQuant-Firmware submodule workspace (ADR 0026 phase B.1, 2026-05-30).
