[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lamquant-codec"
version = "7.7.0"
description = "LML lossless EEG compression codec + LMQ neural codec"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.10"
keywords = ["eeg", "lossless", "compression", "codec", "medical", "neuroscience"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
]
# Core: lossless codec works with numpy + scipy only.
# Neural codec, JIT acceleration, and MNE integration are optional.
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "tqdm>=4.65",
    "prompt_toolkit>=3.0",
]

[project.scripts]
oh = "lamquant_codec.cli_entry:main"
lamquant = "lamquant_codec.cli_entry:main"
lamquant-decode = "lamquant_codec.cli_codec:main"
lamquant-export = "lamquant_codec.export:main"
lamquant-visualize = "tools.visualize_pipeline:main"

[project.optional-dependencies]
# JIT acceleration for lossless codec (3-4x faster)
fast = ["numba>=0.59"]
# Neural codec (requires torch)
neural = [
    "torch>=2.0",
    "snntorch>=0.9",
    "auraloss>=0.4",
    "safetensors>=0.4",
]
# MNE-Python integration
mne = ["mne>=1.5"]
# Rust acceleration (lamquant-core, built separately via maturin)
rust = ["lamquant-core>=0.2.0"]
# Development
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "coverage[toml]>=7.3",
]
dev = [
    "wandb",
    "mlflow",
    "matplotlib>=3.7",
]
research = [
    "selfEEG>=0.2",
    "antropy>=0.1",
    "fooof>=1.0",
    "snac",
]
# Everything for local development
all = [
    "lamquant-codec[fast,neural,mne,test,dev]",
]

# Only lamquant_codec is a real importable library package. The training
# scripts in ai_models/ and firmware/ are run directly (python path/to/
# script.py) and are not installed. tools/ is included because its
# visualize script is registered as a [project.scripts] entry point.
[tool.setuptools.packages.find]
include = ["lamquant_codec*", "tools*"]
exclude = ["tests*", "gui*", "docs*", "build*", "ai_models*", "firmware*", "installer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests that require model loading or heavy computation",
    "c_host: marks tests that compile and run C code on the host",
]

[tool.coverage.run]
source = ["ai_models", "firmware"]
omit = [
    "tests/benchmarks/*",
    "ai_models/dataset_sim/audit_dataset.py",
    "ai_models/dataset_sim/generate_validation_split.py",
    "ai_models/dataset_sim/validate_cross_dataset.py",
    "ai_models/dataset_sim/validate_subband.py",
    "ai_models/dataset_sim/edf_to_events.py",
    "ai_models/snn/generate_activity_labels.py",
    "ai_models/oracle/*",
    "ai_models/student/train_student_subband.py",
    "ai_models/student/harden_artifacts.py",
]

[tool.coverage.report]
fail_under = 25
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "raise NotImplementedError",
]
