[package]
name = "lamquant-firmware"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "LamQuant v7.7 firmware — bare-metal Rust for RP2350 (Hazard3 RISC-V)"
license = "AGPL-3.0"
publish = false

# Library exposes pure DSP/neural/codec modules so we can test them on the
# host (no HAL, no allocator, no panic_handler needed).
[lib]
name = "lamquant_firmware"
path = "src/lib.rs"
test = true
doctest = false
bench = false

# Bare-metal binary — only built for the embedded target.
# On host (cargo test), bin compilation is suppressed via cfg in main.rs.
[[bin]]
name = "lamquant-firmware"
path = "src/main.rs"
test = false
doctest = false
bench = false

[features]
default = []

# Host-side verification mode: enables `cargo test -p lamquant-firmware
# --features host-verify` to run bit-exact parity tests against C
# reference output without flashing the device.
host-verify = []

[dependencies]
# Core codec — no_std, alloc-only. Used by both lib (host tests) and bin.
lamquant-core = { path = "../lamquant-core", default-features = false }

# Allocator support — needed by core types in the lib too. Bin provides
# the actual global allocator instance (see main.rs).
embedded-alloc = "0.6"

# Bare-metal-only deps. Cargo target-specific dependency tables apply
# automatically when --target matches.
[target.riscv32imac-unknown-none-elf.dependencies]
rp235x-hal = { version = "0.3", features = ["rt", "critical-section-impl"] }
riscv = "0.12"
critical-section = "1.2"
embedded-hal = "1.0"
embedded-hal-nb = "1.0"
fugit = "0.3"
nb = "1.1"
panic-halt = "1.0"

# Host-side test dev deps.
[dev-dependencies]

# Profiles defined at workspace root.
# Embedded build:  cargo build --target riscv32imac-unknown-none-elf --profile firmware -p lamquant-firmware
# Host tests:      cargo test -p lamquant-firmware
