[package]
name = "lamquant-firmware"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "LamQuant v7.7 firmware — bare-metal Rust for RP2350 (Hazard3 RISC-V)"
license = "AGPL-3.0"
publish = false

# Library exposes pure DSP/neural/codec modules so we can test them on the
# host (no HAL, no allocator, no panic_handler needed).
[lib]
name = "lamquant_firmware"
path = "src/lib.rs"
test = true
doctest = false
bench = false

# Bare-metal binary — only built for the embedded target.
# On host (cargo test), bin compilation is suppressed via cfg in main.rs.
[[bin]]
name = "lamquant-firmware"
path = "src/main.rs"
test = false
doctest = false
bench = false

[features]
default = []

# Cat B optional comparators (2026-05-22) — opt-in evaluation crates
# for future Hazard3 + basestation work. Each gated behind its own
# feature so default build stays untouched. Activate via
# `cargo build --features cat-b-fixed,cat-b-idsp,...`.
cat-b-fixed = ["dep:fixed"]
cat-b-microfft = ["dep:microfft"]
cat-b-idsp = ["dep:idsp"]
# All-on convenience: pull every Cat B comparator.
cat-b-all = ["cat-b-fixed", "cat-b-microfft", "cat-b-idsp"]

# Host-side verification mode: enables `cargo test -p lamquant-firmware
# --features host-verify` to run bit-exact parity tests against C
# reference output without flashing the device.
host-verify = []

# Per-target features (ADR 0019). Pick exactly one when cross-
# compiling — build.rs enforces mutual exclusion and copies the
# matching `memory/<id>.x` linker script to OUT_DIR.
#
# Selecting none falls back to the repo-root `memory.x` (currently
# RP2350) so existing `cargo build --target riscv32imac-unknown-none-elf`
# flows keep working while per-target HAL bringup lands incrementally.
target-rp2350 = []
target-nrf54l15 = []
target-esp32p4 = []
target-stm32n6 = []
# Sequestered ESP32-S3 build (sequester-not-delete; not part of the
# canonical hub but still callable per ADR 0019 T6.6).
target-esp32s3 = []

[dependencies]
# Core codec — no_std, alloc-only. Used by both lib (host tests) and bin.
lamquant-core = { path = "../lamquant-core", default-features = false }

# Trained weights crate (TNN focal blocks, FSQ table, SNN, rotation, CRC).
# Generated by `python firmware/export_firmware.py --target rust`.
# `subband_v1` selects the Gen 7.1 architecture (width=128, 3 focal blocks).
lamquant-weights = { path = "../lamquant-weights", default-features = false, features = ["subband_v1"] }

# Allocator support — needed by core types in the lib too. Bin provides
# the actual global allocator instance (see main.rs).
embedded-alloc = "0.6"

# Fixed-capacity collections for hot-path discipline (Cat A6 —
# 2026-05-21). `embedded-alloc` stays for one-shot init allocations;
# `heapless::Vec`/`Queue`/`String` replace any per-window/per-call
# `alloc::Vec` in `src/{neural,codec}/*` so the hot path issues zero
# `malloc`. Default-features off keeps no_std-clean.
heapless = { version = "0.8", default-features = false }

# Versioned MCU↔host IPC envelope (Cat A7 step 2 — 2026-05-22).
# `comms.rs` uses `PostcardEnvelope` + `MsgKind` for every cross-link
# message. Optional defmt-format gives on-MCU pretty-print without
# pulling payload bytes into the format string.
lamquant-ipc-types = { path = "../crates/lamquant-ipc-types" }
# postcard pulled in transitively via lamquant-ipc-types but declared
# explicitly so `comms.rs` can call `postcard::take_from_bytes` /
# `postcard::to_slice` without going through a re-export.
postcard = { version = "1", default-features = false }

# Cat B comparators — optional, opt-in via feature flags above.
# Adding the dep makes the lib available for parity tests + future
# kernel swap-outs WITHOUT affecting the default firmware build.
fixed     = { version = "1", default-features = false, optional = true }
microfft  = { version = "0.6", default-features = false, features = ["size-8"], optional = true }
idsp      = { version = "0.21", default-features = false, optional = true }

# `libm` removed 2026-05-21 — firmware now pure Q-format. Last
# uses were `libm::log` in adaptive LPC BIC (replaced with
# `ilog2_q24` + Q48 integer cost) and SNN init `exp_f32` Padé
# (replaced with codegen-time `A_ABS_Q10` pre-baked tables in
# `lamquant-weights/src/generated/snn/`).

# Bare-metal-only deps. Cargo target-specific dependency tables apply
# automatically when --target matches.
[target.riscv32imac-unknown-none-elf.dependencies]
rp235x-hal = { version = "0.3", features = ["rt", "critical-section-impl"] }
riscv = "0.12"
critical-section = "1.2"
embedded-hal = "1.0"
embedded-hal-nb = "1.0"
fugit = "0.3"
nb = "1.1"
# Cat A5 (2026-05-21): firmware logging via defmt over RTT, panic
# handler routed through defmt so probe-rs flash console can decode
# format strings off-MCU (big flash savings vs panic-halt). All three
# deps are bare-metal-target-only so host tests still use std panic.
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
# `panic-halt` retained as the fallback panic handler when defmt
# isn't wanted — selected via Cargo feature. Default = panic-probe.
panic-halt = "1.0"

# Host-side test dev deps.
[dev-dependencies]

# Profiles defined at workspace root.
# Embedded build:  cargo build --target riscv32imac-unknown-none-elf --profile firmware -p lamquant-firmware
# Host tests:      cargo test -p lamquant-firmware
