[package]
name = "lamquant-lml-h5filter"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "LamQuant LML registered as an HDF5 (H5Z) dynamically-loaded compression filter. Lets stock h5py/pynwb store NWB/HDF5 integer datasets through the royalty-free LML lossless codec, and `h5repack -f UD=<id>` losslessly shrink existing NWB files in place. Host-only; never part of the no_std firmware build. ADR 0051 Track 3 (the NWB flank H.BWC cannot reach)."

# Excluded from the default workspace build (it links system libhdf5); build
# explicitly with `cargo build -p lamquant-lml-h5filter --release`.

[lib]
# cdylib = the HDF5 plugin .so; rlib = lets the in-process `register_lml_filter`
# entry point be linked by tests / embedders.
crate-type = ["cdylib", "rlib"]

[dependencies]
# The MCU-tier lossless codec (lml::compress / lml::decompress) — the same
# byte-exact integer pipeline the rest of the codec ships. Host build (std).
lamquant-lml-mcu = { path = "../lamquant-lml-mcu" }
# NOTE: deliberately NO hdf5-metno-sys here. The shipped cdylib must carry no
# DT_NEEDED on any specific libhdf5 (see src/hdf5_abi.rs) so it loads under
# whatever libhdf5 the host process (system / conda / pip-h5py) provides.

[dev-dependencies]
# Tests link real libhdf5 (via hdf5-metno) to drive the filter end-to-end and to
# cross-check our hand-declared H5Z_class2_t layout against the -sys bindings.
hdf5-metno = "0.12"
hdf5-metno-sys = "0.11"
ndarray = "0.17"
tempfile = "3"
